# SpeakWithMe

./: .gitignore  PROJECT_CONTEXT.md  README.md  package-lock.json
backend/: .gitignore  README.md  auth.py  database.py  main.py  pyproject.toml  requirements.txt
backend/data/: audit.jsonl  calibration.json  sessions.json
backend/security/: audit.py  data_retention.py  encryption.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx  options.tsx
frontend/src/components/: CalibrationPage.tsx  Dashboard.tsx  EmergencyButton.tsx  LoginPage.tsx  RegisterPage.tsx  SelectionTerminalBar.tsx  SummaryModal.tsx  TriangleZone.tsx
frontend/src/lib/: api.ts  useEyeTracking.ts
frontend/src/state/: AppContext.tsx  appReducer.ts  appTypes.ts  useDwellController.ts  useGazeOrchestration.ts
