[project]
name = "eye_tracking"
version = "0.1.0"
requires-python = "==3.11.9"
dependencies = [
    "fastapi>=0.116.1",
    "mediapipe>=0.10.21",
    "anthropic>=0.40.0",
    "cryptography>=44.0.0",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]
